# musy

./: .replit  LICENSE  app.py  chatbot1.txt  detectPitch.py  elabapikey.txt  main.py  openaiapikey.txt  pyproject.toml  talk.py
static/: script.js  twinkle1.csv  twinkle2.csv  twinkle3.csv
templates/: index.html
translations/: dictation.py  gpt.py  transcription.py
