[tool.poetry]
name = "repl_nix_musy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
pydub = "^0.25.1"
requests = "^2.31.0"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
openai = "^0.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
